[package]
name = "lightstacks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.51", features = ["derive", "env", "color", "suggestions"] }
colored = "3.0.0"
futures = "0.3.31"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "full", "process"] }
walkdir = "2.5.0"
